Shortest path to tests running with Spring Framework 5
Upgrade to Java 8+

Remove Portlet, Tiles2, and Hibernate 3 + 4 support

Issue: SWF-1692